<resources>
    <string name="app_name">Squapp</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="fb_login">Facebook Login</string>
    <string name="facebook_app_id">1302235013230199</string>
    <string name="fb_login_protocol_scheme">fb166319610444001</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_successful">Login successful</string>
    <string name="login_canceled">Login canceled</string>
    <string name="login_failed">Login failed</string>
    <string name="my_games">My Games</string>
    <string name="find_games">Find Games</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="venues">Venues</string>
    <string-array name="Tags">
        <item>@string/find_games</item>
        <item>@string/my_games</item>
        <item>@string/venues</item>
        <item>@string/account</item>
        <item>@string/about</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="date">Date: </string>
    <string name="hour">Hour: </string>
    <string name="cost">Cost: </string>
    <string name="level">Level: </string>
    <string name="players">Players: </string>
    <string-array name="levels">
        <item>Tronco</item>
        <item>Mas o meno</item>
        <item>Crack</item>
    </string-array>
    <string name="Pick_date">Date</string>
    <string name="Pick_hour_s">Starting hour</string>
    <string name="Pick_hour_f">Finishing hour</string>
    <string name="pick_level">Level</string>
    <string name="pick_num_player">Number of players</string>
    <string name="create">Create</string>
    <string name="view_games">View Games</string>
    <string name="create_game">Create Game</string>
    <string name="choose">Choose</string>
</resources>
