<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#262626" android:gravity="center">
    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:text="@string/Pick_date"
        android:textColor="#ffff"/>

    <DatePicker
        android:id="@+id/date_game_pick"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:calendarViewShown="false"
        android:background="@color/cardview_dark_background"
        android:datePickerMode="spinner"></DatePicker>
    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:text="@string/Pick_hour_s"
        android:textColor="#ffff"/>
    <TimePicker
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:timePickerMode="spinner"
        android:id="@+id/picker_starting"
        android:background="@color/cardview_dark_background"
        ></TimePicker>
    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:text="@string/Pick_hour_f"
        android:textColor="#ffff"/>
    <TimePicker
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:timePickerMode="spinner"
        android:id="@+id/picker_finish"
        android:background="@color/cardview_dark_background"
        ></TimePicker>
    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:text="@string/pick_level"
        android:textColor="#ffff"/>
    <Spinner
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/spinner_level"
        android:spinnerMode="dropdown"
        android:background="@color/cardview_dark_background"
        android:entries="@array/levels">
    </Spinner>
    <TextView
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:text="@string/pick_num_player"
        android:textColor="#ffff"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/number_players"
        android:text="1"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#ffff"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/create"
        android:id="@+id/button_create"
        android:textColor="#ffff"
        android:background="@color/cardview_dark_background"/>

</LinearLayout>